src/main/default/objects/cfp_Data_Movements__c/cfp_Data_Movements__c.object-meta.xml
<CustomObject>
    <label>Data Movement</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>