src/main/default/objects/cfp_Data_Movements__c/fields/cfp_artifactName__c.field-meta.xml
<CustomField>
    <fullName>cfp_artifactName__c</fullName>
    <description>Stores the name of the artifact where you can find this DM</description>
    <label>artifactName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>