src/main/default/objects/cfp_Data_Movements__c/fields/cfp_comments__c.field-meta.xml
<CustomField>
    <fullName>cfp_comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>