src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Data_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>cfp_Data_Group_Name__c</fullName>
    <formula>cfp_DataGroups__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Group Name</label>
    <type>Text</type>
</CustomField>