src/main/default/objects/cfp_Data_Movements__c/fields/cfp_DataGroups__c.field-meta.xml
<CustomField>
    <fullName>cfp_DataGroups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Group</label>
    <referenceTo>cfp_DataGroups__c</referenceTo>
    <relationshipName>dk_functionalsteps</relationshipName>
    <type>Lookup</type>
</CustomField>