src/main/default/objects/cfp_Data_Movements__c/fields/cfp_DM_OrderDisplay__c.field-meta.xml
<CustomField>
    <fullName>cfp_DM_OrderDisplay__c</fullName>
    <formula>TEXT(cfp_order__c) &amp; " - " &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM Order Display</label>
    <type>Text</type>
</CustomField>