src/main/default/objects/cfp_Data_Movements__c/fields/cfp_FunctionalProcess__c.field-meta.xml
<CustomField>
    <fullName>cfp_FunctionalProcess__c</fullName>
    <label>Functional Prcess</label>
    <referenceTo>cfp_FunctionalProcess__c</referenceTo>
    <relationshipName>cfp_functionalsteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>