src/main/default/objects/cfp_Data_Movements__c/fields/cfp_implementationtype__c.field-meta.xml
<CustomField>
    <fullName>cfp_implementationtype__c</fullName>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action Button</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>aura</fullName>
            </value>
            <value>
                <fullName>automation rule</fullName>
            </value>
            <value>
                <fullName>bre</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>config</fullName>
            </value>
            <value>
                <fullName>Criteria Search and Filter</fullName>
            </value>
            <value>
                <fullName>Data Processing Engine</fullName>
            </value>
            <value>
                <fullName>Data Raptor</fullName>
            </value>
            <value>
                <fullName>dataweave</fullName>
            </value>
            <value>
                <fullName>Document Template</fullName>
            </value>
            <value>
                <fullName>Email Template</fullName>
            </value>
            <value>
                <fullName>Exp Builder</fullName>
            </value>
            <value>
                <fullName>flexcard</fullName>
            </value>
            <value>
                <fullName>Flexipage</fullName>
            </value>
            <value>
                <fullName>flow</fullName>
            </value>
            <value>
                <fullName>listview</fullName>
            </value>
            <value>
                <fullName>lwc</fullName>
            </value>
            <value>
                <fullName>omniscript</fullName>
            </value>
            <value>
                <fullName>ootb</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>report</fullName>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
            </value>
            <value>
                <fullName>VisualForce</fullName>
            </value>
            <value>
                <fullName>workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>