src/main/default/objects/cfp_Data_Movements__c/fields/cfp_is_API_Call__c.field-meta.xml
<CustomField>
    <fullName>cfp_is_API_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is API Call</label>
    <type>Checkbox</type>
</CustomField>