src/main/default/objects/cfp_Data_Movements__c/fields/cfp_is_reUsed__c.field-meta.xml
<CustomField>
    <fullName>cfp_is_reUsed__c</fullName>
    <formula>NOT(ISBLANK(cfp_Reused_Functional_Step__c))</formula>
    <label>is reUsed</label>
    <type>Checkbox</type>
</CustomField>