src/main/default/objects/cfp_Data_Movements__c/fields/cfp_isComplete__c.field-meta.xml
<CustomField>
    <fullName>cfp_isComplete__c</fullName>
    <formula>if ( cfp_isOOTB__c  + cfp_isConfig__c +	 cfp_isLowCode__c  + cfp_isProCode__c  &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isComplete</label>
    <type>Checkbox</type>
</CustomField>