src/main/default/objects/cfp_Data_Movements__c/fields/cfp_isLowCode__c.field-meta.xml
<CustomField>
    <fullName>cfp_isLowCode__c</fullName>
    <formula>IF(ispickval(cfp_implementationtype__c,&apos;bre&apos;) || 
			ispickval(cfp_implementationtype__c, &apos;flexcard&apos;) || 
			ispickval(cfp_implementationtype__c, &apos;flow&apos;) ||
			ispickval(cfp_implementationtype__c, &apos;omniscript&apos;) || 
			ispickval(cfp_implementationtype__c, &apos;Data Raptor&apos;) || 
			ispickval(cfp_implementationtype__c, &apos;Document Template&apos;) || 
			ispickval(cfp_implementationtype__c, &apos;Exp Builder&apos;) || 		
			ispickval(cfp_implementationtype__c, &apos;Data Processing Engine&apos;) || 		
			ispickval(cfp_implementationtype__c, &apos;Screen Flow&apos;), 
			IF(cfp_is_API_Call__c, 2, 1),
			0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLowCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>