src/main/default/objects/cfp_Data_Movements__c/fields/cfp_isOOTB__c.field-meta.xml
<CustomField>
    <fullName>cfp_isOOTB__c</fullName>
    <formula>IF(
    AND(ISPICKVAL(cfp_implementationtype__c, &apos;ootb&apos;), NOT(ISBLANK(cfp_Number_of_ListViews__c))),  
    cfp_Number_of_ListViews__c, 
    IF(
        ISPICKVAL(cfp_implementationtype__c, &apos;ootb&apos;), 
        1, 
        0
    )
)</formula>
    <label>isOOTB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>