src/main/default/objects/cfp_Data_Movements__c/fields/cfp_isProCode__c.field-meta.xml
<CustomField>
    <fullName>cfp_isProCode__c</fullName>
    <formula>IF(
  (ISPICKVAL(cfp_implementationtype__c, &apos;Apex&apos;) ||
   ISPICKVAL(cfp_implementationtype__c, &apos;aura&apos;) ||
   ISPICKVAL(cfp_implementationtype__c, &apos;lwc&apos;) ||
   ISPICKVAL(cfp_implementationtype__c, &apos;VisualForce&apos;) ||
   ISPICKVAL(cfp_implementationtype__c, &apos;dataweave&apos;)),
  IF(cfp_is_API_Call__c, 2, 1),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isProCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>