src/main/default/objects/cfp_Data_Movements__c/fields/cfp_movementtype__c.field-meta.xml
<CustomField>
    <fullName>cfp_movementtype__c</fullName>
    <label>Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>