src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>cfp_Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>