src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Number_of_Reports__c.field-meta.xml
<CustomField>
    <fullName>cfp_Number_of_Reports__c</fullName>
    <label>Number of Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>