src/main/default/objects/cfp_Data_Movements__c/fields/cfp_order__c.field-meta.xml
<CustomField>
    <fullName>cfp_order__c</fullName>
    <label>order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>