src/main/default/objects/cfp_Data_Movements__c/fields/cfp_report_sort_order__c.field-meta.xml
<CustomField>
    <fullName>cfp_report_sort_order__c</fullName>
    <formula>CASE(cfp_Implemenation_Category__c, 
&apos;ootb&apos;, 0, 
&apos;config&apos;, 1, 
&apos;lowcode&apos;, 3,
&apos;procode&apos;, 4,
5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>report sort order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>