src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Reused_from_Functional_Process__c.field-meta.xml
<CustomField>
    <fullName>cfp_Reused_from_Functional_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reused from Functional Process</label>
    <referenceTo>cfp_FunctionalProcess__c</referenceTo>
    <relationshipName>dk_functionalsteps1</relationshipName>
    <type>Lookup</type>
</CustomField>