src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Reused_from_System_Context__c.field-meta.xml
<CustomField>
    <fullName>cfp_Reused_from_System_Context__c</fullName>
    <formula>cfp_Reused_from_Functional_Process__r.cfp_System_Context__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reused from System Context</label>
    <type>Text</type>
</CustomField>