src/main/default/objects/cfp_Data_Movements__c/fields/cfp_Reused_Functional_Step__c.field-meta.xml
<CustomField>
    <fullName>cfp_Reused_Functional_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reused Functional Step</label>
    <referenceTo>cfp_Data_Movements__c</referenceTo>
    <relationshipName>cfp_Reused_Functional_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>