src/main/default/objects/cfp_Data_Movements__c/fields/cfp_System_Context__c.field-meta.xml
<CustomField>
    <fullName>cfp_System_Context__c</fullName>
    <formula>cfp_FunctionalProcess__r.cfp_System_Context__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Context</label>
    <type>Text</type>
</CustomField>