src/main/default/objects/cfp_Data_Movements__c/recordTypes/cfp_listviewStep.recordType-meta.xml
<RecordType>
    <fullName>cfp_listviewStep</fullName>
    <active>false</active>
    <label>listviewStep</label>
</RecordType>