src/main/default/objects/cfp_Data_Movements__c/recordTypes/functionalstep.recordType-meta.xml
<RecordType>
    <fullName>functionalstep</fullName>
    <active>true</active>
    <label>functionalstep</label>
</RecordType>