src/main/default/objects/cfp_Data_Movements__c/listViews/cfp_reuse_management.listView-meta.xml
<ListView>
    <fullName>cfp_reuse_management</fullName>
    <columns>cfp_FunctionalProcess__c</columns>
    <columns>NAME</columns>
    <columns>cfp_is_reUsed__c</columns>
    <columns>cfp_Reused_from_Functional_Process__c</columns>
    <columns>cfp_Reused_from_System_Context__c</columns>
    <columns>cfp_Reused_Functional_Step__c</columns>
    <columns>cfp_order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cfp_Data_Movements__c.functionalstep</value>
    </filters>
    <filters>
        <field>cfp_FunctionalProcess__c</field>
        <operation>contains</operation>
        <value>MARS</value>
    </filters>
    <label>reuse management</label>
</ListView>