src/main/default/objects/cfp_Data_Movements__c/listViews/cfp_Superseeded_Management.listView-meta.xml
<ListView>
    <fullName>cfp_Superseeded_Management</fullName>
    <columns>cfp_FunctionalProcess__c</columns>
    <columns>NAME</columns>
    <columns>cfp_implementationtype__c</columns>
    <columns>cfp_is_reUsed__c</columns>
    <columns>cfp_Reused_from_Functional_Process__c</columns>
    <columns>cfp_Reused_from_System_Context__c</columns>
    <columns>cfp_Reused_Functional_Step__c</columns>
    <columns>cfp_order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cfp_Data_Movements__c.functionalstep</value>
    </filters>
    <filters>
        <field>cfp_implementationtype__c</field>
        <operation>notEqual</operation>
        <value>Compact Layout,config,ootb</value>
    </filters>
    <label>Superseeded Management</label>
</ListView>