src/main/default/objects/cfp_Data_Movements__c/listViews/metadataView.listView-meta.xml
<ListView>
    <fullName>metadataView</fullName>
    <columns>cfp_FunctionalProcess__c</columns>
    <columns>NAME</columns>
    <columns>cfp_Implemenation_Category__c</columns>
    <columns>cfp_is_reUsed__c</columns>
    <columns>cfp_isComplete__c</columns>
    <columns>cfp_isConfig__c</columns>
    <columns>cfp_isLowCode__c</columns>
    <columns>cfp_isOOTB__c</columns>
    <columns>cfp_isProCode__c</columns>
    <columns>cfp_order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cfp_Data_Movements__c.functionalstep</value>
    </filters>
    <filters>
        <field>cfp_FunctionalProcess__c</field>
        <operation>contains</operation>
        <value>MARS</value>
    </filters>
    <label>metadataView</label>
</ListView>