src/main/default/objects/cfp_Data_Movements__c/listViews/recently_updated.listView-meta.xml
<ListView>
    <fullName>recently_updated</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>cfp_FunctionalProcess__c</columns>
    <columns>cfp_Data_Group_Name__c</columns>
    <columns>cfp_movementtype__c</columns>
    <columns>cfp_implementationtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>recently updated</label>
</ListView>